--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
    <meta name="viewport"
          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <link rel="stylesheet" href="src/assets/main.css">
    <title>Product App</title>
 </head>
 <body>
       <div id="app">
-            <h1>{{ product }}</h1>
-            <p>{{ description }}</p>
+
+         <div class="product">
+
+            <div class="product-image">
+                <img alt="#" src=""/>
+            </div>
+     
+            <div class="product-info">
+                <h1>{{ product }}</h1>
+            </div>
+
       </div>
 
 <script defer src="src/main.js"></script>
