--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          <div class="product">
 
             <div class="product-image">
-                <img alt="#" src=""/>
+                <img alt="#" v-bind:src="image"/>
             </div>
      
             <div class="product-info">
