вывод изображения синих носков, а также вывод altText

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          <div class="product">
 
             <div class="product-image">
-                <img alt="#" v-bind:src="image"/>
+                <img alt="#" :src="image" v-bind:alt="altText"/>
             </div>
      
             <div class="product-info">
