добавлена на странице ссылка из практической работы #2

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
      
             <div class="product-info">
                 <h1>{{ product }}</h1>
+                <a :href="link">More products like this</a>
             </div>
 
       </div>
