--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
      
             <div class="product-info">
                 <h1>{{ product }}</h1>
-                <a :href="link">More products like this</a>
+                <p v-if="inStock">In Stock</p>
+                <p v-else>Out of Stock</p>
             </div>
 
       </div>
