вывод списка на странице и массива вариантов товара

--- a/index.html
+++ b/index.html
@@ -14,14 +14,20 @@
          <div class="product">
 
             <div class="product-image">
-                <img alt="#" :src="image" v-bind:alt="altText"/>
+                <img :src="image" v-bind:alt="altText"/>
             </div>
      
             <div class="product-info">
                 <h1>{{ product }}</h1>
                 <p v-if="inStock">In Stock</p>
                 <p v-else>Out of Stock</p>
-                <span v-if="onSale">On Sale</span>
+                <ul>
+                  <li v-for="detail in details">{{ detail }}</li>
+               </ul>
+            </div>
+
+            <div v-for="variant in variants" :key="variant.variantId">
+               <p>{{ variant.variantColor }}</p>
             </div>
 
       </div>
