добавление в объект с данными массив sizes

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                <p>{{ variant.variantColor }}</p>
             </div>
 
+            <div v-for="size in sizes">
+               <p>{{ size }}</p>
+            </div>
+
       </div>
 
 <script defer src="src/main.js"></script>
