добавление атрибута и метода для добавления товара и добавление атрибутов в массиве variants

--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
                 <ul>
                   <li v-for="detail in details">{{ detail }}</li>
                </ul>
+               <div v-for="variant in variants" :key="variant.variantId">
+                  <p>{{ variant.variantColor }}</p>
+               </div>
             </div>
 
-            <div v-for="variant in variants" :key="variant.variantId">
-               <p>{{ variant.variantColor }}</p>
+            <div class="cart">
+               <p>Cart({{ cart }})</p>
             </div>
 
-            <div v-for="size in sizes">
-               <p>{{ size }}</p>
-            </div>
+            <button v-on:click="addToCart">Add to cart</button>
+
 
       </div>
 
