создание кнопки и метода для уменьшения значения

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 
             <button v-on:click="addToCart">Add to cart</button>
 
+            <button v-on:click="removeToCart">Remove to cart</button>
+
+
 
       </div>
 
