обработка событий мыши на определенный квадрат

--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
                 <ul>
                   <li v-for="detail in details">{{ detail }}</li>
                </ul>
-               <div v-for="variant in variants" :key="variant.variantId">
-                  <p @mouseover="updateProduct(variant.variantImage)">
-                      {{ variant.variantColor }}
-                  </p>
+
+               <div
+               class="color-box"
+               v-for="variant in variants"
+               :key="variant.variantId"
+               :style="{ backgroundColor:variant.variantColor }"
+               @mouseover="updateProduct(variant.variantImage)"
+               >
                </div>
+               </div>
+               <div class="cart">
+                  <p>Cart({{ cart }})</p>
+               </div>
+               <button v-on:click="addToCart">Add to cart</button>
             </div>
-
-            <div class="cart">
-               <p>Cart({{ cart }})</p>
-            </div>
-
-            <button v-on:click="addToCart">Add to cart</button>
-
-            <button v-on:click="removeToCart">Remove to cart</button>
-
 
 
       </div>
