неактивная серая кнопка для добавления

--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
                <div class="cart">
                   <p>Cart({{ cart }})</p>
                </div>
-               <button v-on:click="addToCart">Add to cart</button>
+               <button 
+                  v-on:click="addToCart" 
+                  :disabled="!inStock" 
+                  :class="{ disabledButton: !inStock }">
+                  Add to cart
+               </button>
             </div>
 
 
