--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
      
             <div class="product-info">
                 <h1>{{ product }}</h1>
-                <p v-if="inStock">In Stock</p>
-                <p v-else>Out of Stock</p>
+                <p>In Stock</p>
+                <p :class="{ 'outOfStock': !inStock }">Out of Stock</p>
                 <ul>
                   <li v-for="detail in details">{{ detail }}</li>
                </ul>
