--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
       <div id="app">
 
+         <h1>{{ title }}</h1>
+
          <div class="product">
 
             <div class="product-image">
@@ -19,8 +21,8 @@
      
             <div class="product-info">
                 <h1>{{ product }}</h1>
-                <p>In Stock</p>
-                <p :class="{ 'outOfStock': !inStock }">Out of Stock</p>
+                <p v-if="inStock">In stock</p>
+                <p v-else>Out of Stock</p>
                 <ul>
                   <li v-for="detail in details">{{ detail }}</li>
                </ul>
