--- a/index.html
+++ b/index.html
@@ -9,50 +9,9 @@
    <title>Product App</title>
 </head>
 <body>
+
       <div id="app">
-
-         <h1>{{ title }}</h1>
-
-         <div class="product">
-
-            <div class="product-image">
-                <img :src="image" v-bind:alt="altText"/>
-            </div>
-     
-            <div class="product-info">
-                <h1>{{ product }}</h1>
-                <p v-if="onSale">{{ sale() }}</p>
-                <p v-else="!onSale">{{ sale() }}</p>
-                <p>In stock</p>
-                <p :class="{ 'outOfStock': !inStock }">Out of Stock</p>
-                <ul>
-                  <li v-for="detail in details">{{ detail }}</li>
-               </ul>
-
-               <div
-               class="color-box"
-               v-for="variant in variants"
-               :key="variant.variantId"
-               :style="{ backgroundColor: variant.variantColor }"
-               @mouseover="updateProduct(index)"
-               >
-               </div>
-               </div>
-               <div class="cart">
-                  <p>Cart({{ cart }})</p>
-               </div>
-               <button 
-                  v-on:click="addToCart" 
-                  :disabled="!inStock" 
-                  :class="{ disabledButton: !inStock }">
-                  Add to cart
-               </button>
-
-               <button v-on:click="removeToCart">Remove to cart</button>
-
-            </div>
-
-
+         <product></product>
       </div>
 
 <script defer src="src/main.js"></script>
