--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 
-      <div id="app">
-         <product></product>
-      </div>
+   <div id="app">
+      <product :premium="premium"></product>
+   </div>
 
 <script defer src="src/main.js"></script>
 
