--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 <body>
 
    <div id="app">
-      <product :premium="premium"></product>
-   </div>
+      <div class="cart">
+          <p>Cart({{ cart.length }})</p>
+      </div>
+      <product :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeItem"></product>
+  </div>
 
 <script defer src="src/main.js"></script>
 
