--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <product :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeItem"></product>
   </div>
 
-<script defer src="src/main.js"></script>
+<script defer type="module" src="src/main.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.18/vue.min.js"></script>
 
